Fix bug that shows device over header during animation on mobile

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,6 +3,7 @@
     width: 100%;
     position: fixed;
     background-color: #ededed;
+    z-index: 999;
 
     transition: box-shadow 0.3s ease-in-out;
 }
