--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -46,7 +46,7 @@
     color: #fff;
     text-decoration: none;
     font-size: 30px;
-    margin: 5px 0;
+    margin: 15px 0;
 }
 
 /* .bm-overlay {
