--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #ededed;
+  color: #444;
 }
 
 h1 {
-  margin: 0;
+  font-family: 'Roboto Condensed', sans-serif;
 }
